Fix card and cta styling

--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -27,9 +27,10 @@ const {hasBorder = false, img="/pet-photography-site/icons/instagram.svg", isOra
   .orange {
     color: var(--orange);
   }
-  @media (max-width: 600px) {
+  @media (max-width: 650px) {
     div {
       width: 100%;
+      max-width: 450px;
     }
   }
 </style>
