--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -10,7 +10,12 @@ const currentPath = pathname.slice(1);
 		<meta charset="UTF-8" />
 		<meta name="description" content="Astro description" />
 		<meta name="viewport" content="width=device-width" />
-		<link rel="icon" type="image/svg+xml" href="/pet-photography-site/favicon.svg" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/pet-photography-site/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/pet-photography-site/favicon-16x16.png">
+    <link rel="manifest" href="/pet-photography-site/site.webmanifest">
+    <link rel="mask-icon" href="/pet-photography-site/safari-pinned-tab.svg" color="#5bbad5">
+    <meta name="msapplication-TileColor" content="#da532c">
+    <meta name="theme-color" content="#ffffff">
 		<title>{title}</title>
 	</head>
 	<body>
