--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -34,7 +34,7 @@ import '@splidejs/splide/css';
     <section class="card-container">
       <Card hasBorder={false}, isOrange={true}, img={'/pet-photography-site/images/ndAebZM.png'}, heading="Preserve Memories", text='Make sure your memories are acessible whenever you want to revist them. Browse your image gallery on any device or purchase prints to frame and display.'></Card>
       <Card hasBorder={false}, isOrange={true}, img={'/pet-photography-site/images/kpepfML.png'}, heading="Express Personality", text="All pets have their own unique personalities. Our extensive collection of props and potential settings helps us display them in a memorable way."></Card>
-      <Card hasBorder={false}, isOrange={true}, img={'/pet-photography-site/images/wN2MhJT.png'}, heading="Capture Friendship", text="Let us shine a light on the strong bond between you and your pet. Choose from a list of poses or simply show off your natural interactions for the camera."></Card>
+      <Card hasBorder={false}, isOrange={true}, img={'/pet-photography-site/images/boy_dog.jpg'}, heading="Capture Friendship", text="Let us shine a light on the strong bond between you and your pet. Choose from a list of poses or simply show off your natural interactions for the camera."></Card>
     </section>
     <section class="cta">
       <h2>Let us help you make those unforgettable memories with your pets last forever</h2>
@@ -47,39 +47,39 @@ import '@splidejs/splide/css';
           <ul class="splide__list">
             <li class="splide__slide">
               <div class="testimonials__card">
-                <img src="/pet-photography-site/images/wN2MhJT.png" width="50px" height="50px">
+                <img src="/pet-photography-site/icons/profile_1.svg" width="50px" height="50px">
                 <p>Very professional service, passion and love towards animals comes through in every detail and the quality of the photographs is stunning. Our pet chihuahua felt very comfortable and safe through the whole shoot.</p>
               </div>
             </li>
             <li class="splide__slide">
               <div class="testimonials__card">
-                <img src="/pet-photography-site/images/wN2MhJT.png" width="50px" height="50px">
+                <img src="/pet-photography-site/icons/profile_2.svg" width="50px" height="50px">
                 <p>Worth every penny. My wife was the one who came up with the idea of getting a professional photoshoot for our kittens, I was skeptical but the results are incredible. There's no way we could ever capture their cuteness quite like Pawprint Photography did.</p>
               </div>
             </li>
             <li class="splide__slide">
               <div class="testimonials__card">
-                <img src="/pet-photography-site/images/wN2MhJT.png" width="50px" height="50px">
+                <img src="/pet-photography-site/icons/profile_3.svg" width="50px" height="50px">
                 <p>
                   I cannot recommend Pawprint enough. Our dog was scared and stressed at first, she's not very good with strangers, but the patience and care shown by the photographer turned things around. The photoshoot took longer than planned as a result but there were no extra fees or any issues regarding that.</p>
               </div>
             </li>
             <li class="splide__slide">
               <div class="testimonials__card">
-                <img src="/pet-photography-site/images/wN2MhJT.png" width="50px" height="50px">
+                <img src="/pet-photography-site/icons/profile_4.svg" width="50px" height="50px">
                 <p>5 star service. Great with animals and with children, our whole family pictures came out absolutely incredible.</p>
               </div>
             </li>
             <li class="splide__slide">
               <div class="testimonials__card">
-                <img src="/pet-photography-site/images/wN2MhJT.png" width="50px" height="50px">
+                <img src="/pet-photography-site/icons/profile_5.svg" width="50px" height="50px">
                 <p>Great service at a really reasonable price. My hamster has never looked this adorable on any of the pictures I've ever took.
                 </p>
               </div>
             </li>
             <li class="splide__slide">
               <div class="testimonials__card">
-                <img src="/pet-photography-site/images/wN2MhJT.png" width="50px" height="50px">
+                <img src="/pet-photography-site/icons/profile_6.svg" width="50px" height="50px">
                 <p>My dog is getting up there in years, so I wanted to make sure to have something to remember him by. Pawprint delivered, not only are the photos amazing but it feels like every little aspect of my dog's personality has been captured.</p>
               </div>
             </li>
