--- a/src/pages/gallery.astro
+++ b/src/pages/gallery.astro
@@ -8,19 +8,23 @@ import Layout from '../layouts/Layout.astro';
     <div class="gallery">
       <img src="/pet-photography-site/images/04n5wP8_d.jpg"/>
       <img src="/pet-photography-site/images/5q1hSTL.jpg">
+      <img src="/pet-photography-site/images/dog-4494554_640.jpg">
       <img src="/pet-photography-site/images/animal-7220153_1920.jpg">
       <img src="/pet-photography-site/images/bordeaux-mastiff-7170006_1920.jpg">
       <img src="/pet-photography-site/images/cat-2083492_1920.jpg">
       <img src="/pet-photography-site/images/cat-2605502_1920.jpg">
       <img src="/pet-photography-site/images/cat-7956026_1920.jpg">
+      <img src="/pet-photography-site/images/woman-6687637_640.jpg">
       <img src="/pet-photography-site/images/dog-644111_1920.jpg">
       <img src="/pet-photography-site/images/dog-1868871_1920.jpg">
       <img src="/pet-photography-site/images/dog-3102469_1920.jpg">
       <img src="/pet-photography-site/images/dog-6977210_1920.jpg">
+      <img src="/pet-photography-site/images/dog-5964181_640.jpg">
       <img src="/pet-photography-site/images/european-shorthair-8601492_1920.jpg">
       <img src="/pet-photography-site/images/finnish-lapphund-8355621_1920.jpg">
       <img src="/pet-photography-site/images/hamster-3604592_1920.jpg">
       <img src="/pet-photography-site/images/t1S6ABe_d.jpg">
+      <img src="/pet-photography-site/images/cat-2512866_640.jpg">
     </div>
 	</main>
 </Layout>
