Add services content

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -13,8 +13,8 @@ import '@splidejs/splide/css';
           <li class="splide__slide" data-splide-interval="5000">
             <picture>
               <source media="(max-width: 599px)" srcset="/pet-photography-site/images/heroadjusted.jpeg" />
-              <source media="(min-width: 600px)" srcset="/pet-photography-site/images/2LsSEal.jpeg" />
-              <img src="/pet-photography-site/images/2LsSEal.jpeg"/>
+              <source media="(min-width: 600px)" srcset="/pet-photography-site/images/pexels-chevanon-1108099.jpg" />
+              <img src="/pet-photography-site/images/pexels-chevanon-1108099.jpg"/>
             </picture>
           </li>
           <li class="splide__slide" data-splide-interval="5000">
