--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -168,6 +168,7 @@ import '@splidejs/splide/css';
     & img {
       width: 20%;
       height: 20%;
+      flex-shrink: 0;
     }
     & p {
       height: 320px;%;
