Fix hero resizing on scroll on mobile

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -93,12 +93,12 @@ import '@splidejs/splide/css';
 <style>
   img {
     width: 100%;
-    height: 90dvh;
+    height: 90vh;
     object-fit: cover;
   }
   #hero-carousel {
     width: 100%;
-    height: 90dvh;
+    height: 90vh;
     margin-bottom: var(--padding-large);
   }
   .splide_slide {
