Add appropriate alt text to images

--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -3,7 +3,7 @@ const {hasBorder = false, img="/pet-photography-site/icons/instagram.svg", isOra
 ---
 
 <div class:list={{border: hasBorder}}>
-  <img src={img} height="200" width="200">
+  <img src={img} alt="" height="200" width="200">
   <h3 class:list={{orange: isOrange}}>{heading}</h3>
   <p>{text}</p>
 </div>
