--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -14,7 +14,7 @@ import CtaButton from '../components/CtaButton.astro';
       </div>
       <div class="wrapper">
         <section class="container story">
-          <img src="/pet-photography-site/images/story.png">
+          <img src="/pet-photography-site/images/story.png" alt="Two cats cuddled up against a camera" height="340" width="499">
           <div class="story-text">
             <h2>Our Story</h2>
             <p>We are a family-owned small business with a lot of love for animals. As lifelong pet owners, we understand how strong and important the bonds between humans and their furry companions can be. As photographers, we understand that pictures have the power to instantly bring back vivid memories. That inspired us to combine our passions and help others cherish those moments with their pets forever through our work.</p>
@@ -29,7 +29,7 @@ import CtaButton from '../components/CtaButton.astro';
       </div>
       <div class="wrapper">
         <section class="container mission">
-          <img src="/pet-photography-site/images/mission.png">
+          <img src="/pet-photography-site/images/mission.png" alt="A dog standing in a field">
           <div class="mission-text">
             <h2>Our Mission</h2>
             <p>Our goal is to help you create beautiful memories with your pets and revisit them with our skillful photography. Pictures of our happy pets can improve our mood, comfort us when we're missing them, and hold a special place in our heart as precious keepsakes. We work to ensure that the photos you have of your pets show off their special personalities while looking visually and aesthetically pleasing.</p>
