--- a/src/pages/gallery.astro
+++ b/src/pages/gallery.astro
@@ -6,25 +6,25 @@ import Layout from '../layouts/Layout.astro';
 	<main>
     <h1>Gallery</h1>
     <div class="gallery">
-      <img src="/pet-photography-site/images/04n5wP8_d.jpg"/>
-      <img src="/pet-photography-site/images/5q1hSTL.jpg">
-      <img src="/pet-photography-site/images/dog-4494554_640.jpg">
-      <img src="/pet-photography-site/images/animal-7220153_1920.jpg">
-      <img src="/pet-photography-site/images/bordeaux-mastiff-7170006_1920.jpg">
-      <img src="/pet-photography-site/images/cat-2083492_1920.jpg">
-      <img src="/pet-photography-site/images/cat-2605502_1920.jpg">
-      <img src="/pet-photography-site/images/cat-7956026_1920.jpg">
-      <img src="/pet-photography-site/images/woman-6687637_640.jpg">
-      <img src="/pet-photography-site/images/dog-644111_1920.jpg">
-      <img src="/pet-photography-site/images/dog-1868871_1920.jpg">
-      <img src="/pet-photography-site/images/dog-3102469_1920.jpg">
-      <img src="/pet-photography-site/images/dog-6977210_1920.jpg">
-      <img src="/pet-photography-site/images/dog-5964181_640.jpg">
-      <img src="/pet-photography-site/images/european-shorthair-8601492_1920.jpg">
-      <img src="/pet-photography-site/images/finnish-lapphund-8355621_1920.jpg">
-      <img src="/pet-photography-site/images/hamster-3604592_1920.jpg">
-      <img src="/pet-photography-site/images/t1S6ABe_d.jpg">
-      <img src="/pet-photography-site/images/cat-2512866_640.jpg">
+      <img src="/pet-photography-site/images/04n5wP8_d.jpg" alt="A group of huskies running together in the snow"/>
+      <img src="/pet-photography-site/images/5q1hSTL.jpg" alt="A dog standing in a field">
+      <img src="/pet-photography-site/images/dog-4494554_640.jpg" alt="The silhouette of a woman petting her dog">
+      <img src="/pet-photography-site/images/animal-7220153_1920.jpg" alt="A dog running through a sea of grass">
+      <img src="/pet-photography-site/images/bordeaux-mastiff-7170006_1920.jpg" alt="A dog running on a leash">
+      <img src="/pet-photography-site/images/cat-2083492_1920.jpg" alt="A cat perched on a stone wall">
+      <img src="/pet-photography-site/images/cat-2605502_1920.jpg" alt="A cat sprawled out on the floor">
+      <img src="/pet-photography-site/images/cat-7956026_1920.jpg" alt="A cat peeking out from behind a hedge">
+      <img src="/pet-photography-site/images/woman-6687637_640.jpg" alt="A woman sitting with her cat on her lap">
+      <img src="/pet-photography-site/images/dog-644111_1920.jpg" alt="A dog running along a narrow path">
+      <img src="/pet-photography-site/images/dog-1868871_1920.jpg" alt="A dog looking at the camera">
+      <img src="/pet-photography-site/images/dog-3102469_1920.jpg" alt="A dog resting its face on the floor">
+      <img src="/pet-photography-site/images/dog-6977210_1920.jpg" alt="A dog running through some grass">
+      <img src="/pet-photography-site/images/dog-5964181_640.jpg" alt="A girl holding her dog">
+      <img src="/pet-photography-site/images/european-shorthair-8601492_1920.jpg" alt="A cat lying flat on the floor">
+      <img src="/pet-photography-site/images/finnish-lapphund-8355621_1920.jpg" alt="A dog sitting in front of a bookshelf">
+      <img src="/pet-photography-site/images/hamster-3604592_1920.jpg" alt="A hamster sitting on a mossy log">
+      <img src="/pet-photography-site/images/t1S6ABe_d.jpg" alt="A dog with a teddy bear in front of him">
+      <img src="/pet-photography-site/images/cat-2512866_640.jpg" alt="A cat lying partly sideways on the floor">
     </div>
 	</main>
 </Layout>
