--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,21 +9,21 @@ import '@splidejs/splide/css';
 	<main>
     <section class="splide" id="hero-carousel" aria-label="Splide Basic HTML Example">
       <div class="splide__track">
-        <ul class="splide__list">
-          <li class="splide__slide" data-splide-interval="5000">
+        <div class="splide__list">
+          <div class="splide__slide" data-splide-interval="5000">
             <picture>
               <source media="(max-width: 599px)" srcset="/pet-photography-site/images/heroadjusted.jpeg" />
               <source media="(min-width: 600px)" srcset="/pet-photography-site/images/pexels-chevanon-1108099.jpg" />
-              <img src="/pet-photography-site/images/pexels-chevanon-1108099.jpg" class="top"/>
+              <img src="/pet-photography-site/images/pexels-chevanon-1108099.jpg" alt="Two dogs in a field of grass" class="top"/>
             </picture>
-          </li>
-          <li class="splide__slide" data-splide-interval="5000">
-            <img src="/pet-photography-site/images/cat-5778777_1920.jpg" class="top"/>
-          </li>
-          <li class="splide__slide" data-splide-interval="5000">
-            <img src="/pet-photography-site/images/guinea-pig-2513177_1920.jpg"/>
-          </li>
-        </ul>
+          </div>
+          <div class="splide__slide" data-splide-interval="5000">
+            <img src="/pet-photography-site/images/cat-5778777_1920.jpg" alt="A vigilant cat sitting in the grass" class="top"/>
+          </div>
+          <div class="splide__slide" data-splide-interval="5000">
+            <img src="/pet-photography-site/images/guinea-pig-2513177_1920.jpg" alt="A guinea pig partly hidden behind a log"/>
+          </div>
+        </div>
       </div>
     </section>
     <section class="intro">
@@ -44,46 +44,46 @@ import '@splidejs/splide/css';
       <h2>Over 100 pet owners satisfied with our service</h2>
       <section class="splide" id="testimonials" aria-label="Splide Basic HTML Example">
         <div class="splide__track">
-          <ul class="splide__list">
-            <li class="splide__slide">
+          <div class="splide__list">
+            <div class="splide__slide">
               <div class="testimonials__card">
-                <img src="/pet-photography-site/icons/profile_1.svg" width="50px" height="50px">
+                <img src="/pet-photography-site/icons/profile_1.svg" alt="Profile 1" width="50px" height="50px">
                 <p>Very professional service, passion and love towards animals comes through in every detail and the quality of the photographs is stunning. Our pet chihuahua felt very comfortable and safe through the whole shoot.</p>
               </div>
-            </li>
-            <li class="splide__slide">
+            </div>
+            <div class="splide__slide">
               <div class="testimonials__card">
-                <img src="/pet-photography-site/icons/profile_2.svg" width="50px" height="50px">
+                <img src="/pet-photography-site/icons/profile_2.svg" alt="Profile 2" width="50px" height="50px">
                 <p>Worth every penny. My wife was the one who came up with the idea of getting a professional photoshoot for our kittens, I was skeptical but the results are incredible. There's no way we could ever capture their cuteness quite like Pawprint Photography did.</p>
               </div>
-            </li>
-            <li class="splide__slide">
+            </div>
+            <div class="splide__slide">
               <div class="testimonials__card">
-                <img src="/pet-photography-site/icons/profile_3.svg" width="50px" height="50px">
+                <img src="/pet-photography-site/icons/profile_3.svg" alt="Profile 3" width="50px" height="50px">
                 <p>
                   I cannot recommend Pawprint enough. Our dog was scared and stressed at first (she's not good with strangers), but the patience and care shown by the photographer helped so much. The photoshoot took a bit longer beacuae of that, but there were no extra fees or issues as a result.</p>
               </div>
-            </li>
-            <li class="splide__slide">
+            </div>
+            <div class="splide__slide">
               <div class="testimonials__card">
-                <img src="/pet-photography-site/icons/profile_4.svg" width="50px" height="50px">
+                <img src="/pet-photography-site/icons/profile_4.svg" alt="Profile 4" width="50px" height="50px">
                 <p>5 star service. Great with animals and with children, our whole family pictures came out absolutely incredible.</p>
               </div>
-            </li>
-            <li class="splide__slide">
+            </div>
+            <div class="splide__slide">
               <div class="testimonials__card">
-                <img src="/pet-photography-site/icons/profile_5.svg" width="50px" height="50px">
+                <img src="/pet-photography-site/icons/profile_5.svg" alt="Profile 5" width="50px" height="50px">
                 <p>Great service at a really reasonable price. My hamster has never looked this adorable on any of the pictures I've ever took.
                 </p>
               </div>
-            </li>
-            <li class="splide__slide">
+            </div>
+            <div class="splide__slide">
               <div class="testimonials__card">
-                <img src="/pet-photography-site/icons/profile_6.svg" width="50px" height="50px">
+                <img src="/pet-photography-site/icons/profile_6.svg" alt="Profile 6" width="50px" height="50px">
                 <p>My dog is getting up there in years, so I wanted to make sure to have something to remember him by. Pawprint delivered, not only are the photos amazing but it feels like every little aspect of my dog's personality has been captured.</p>
               </div>
-            </li>
-          </ul>
+            </div>
+          </div>
         </div>
     </section>
     </section>
